name: abacate
version: 0.0.1
cabal-version: >= 1.8
build-type: Simple
license-file: LICENSE
copyright: 2012 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
author: Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
maintainer: Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
stability: experimental
homepage: http://github.com/marcotmarcot/abacate
bug-reports: http://github.com/marcotmarcot/abacate/issues
synopsis: Parser for a language similar to Cucumber's Gherkin
description:
  Gherkin is the language used by the Cucumber system for Behaviour Drive
  Development.  This package contains a parser to it, based on its BNF with
  minor changes.
category: Language
tested-with: GHC ==7.4.2
extra-source-files:
  tests/data/environment.feature,
  tests/data/givenWhenGivenWhen.feature,
  tests/data/calculator.feature,
  tests/data/wrongComment.feature,
  tests/data/complete.feature

library
  exposed-modules:
    Language.Abacate,
    Language.Abacate.Types,
    Language.Abacate.BNF
  build-depends:
    -- 4.5.1.0
    base,
    -- 0.11.2.2
    text,
    -- 3.1.3
    parsec
  ghc-options: -Wall -O

Test-Suite abacate-test
  type: exitcode-stdio-1.0
  main-is: abacate.hs
  hs-source-dirs: tests
  build-depends:
    base,
    text,
    abacate,
    -- 1.2.5.1
    HUnit
  ghc-options: -Wall
